# idm-room-sensor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_EDITION_MANIFEST.txt  FILE_INVENTORY.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md
.github/: pull_request_template.md  requirements-ci.txt
docs/: architecture.md  cooling-safety.md  hardware.md  help-wanted.md  installation.md  modbus-glt.md  original-sensor.md  repository-settings.md  safety.md  validation.md
firmware/: BUILDING.md  LICENSE  esp-sensor-esphome.yaml  fake-sensor-bridge.yaml  fake-sensor-esphome.yaml  requirements.txt
firmware/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  native_runtime.h
homeassistant/: climate-engine-package.yaml  dashboard-example.yaml  fake-sensor-automation.yaml
idm-heatpump-hass/: IMPLEMENTATION.md  README.md  services.yaml.patch  services_implementation.py  test_services_external_climate.py
manufacturing/: release-checklist.md
pages/: README.md  _navbar.md  _sidebar.md  architecture.md  cooling-safety.md  esphome.md  faq.md  hardware.md  help-wanted.md  home-assistant.md  index.html  native-esp-idf.md  troubleshooting.md  validation.md
tests/: test_climate_template.py  test_dew_point.py  test_esp_idf_native.py  test_firmware_common.py  test_homeassistant_blueprints.py  test_idm_analog_output_core.py  test_idm_bridge_core.py  test_idm_calibration_storage_core.py  test_idm_native_runtime.py  test_mqtt_contract.py  test_webui_contract.py
tools/: check_esphome.py  check_repo.py  (+3 more)
(+223 files in other folders)
